# ostrich-connect

./: .gitignore  Cargo.toml  README.md
apps/linux-gtk/: Cargo.toml  README.md
apps/linux-gtk/src/: main.rs
apps/macos-swift/: Package.swift  README.md
apps/macos-swift/Sources/COstrichFFI/: module.modulemap
apps/macos-swift/Sources/COstrichFFI/include/: oc_ffi.h
apps/macos-swift/Sources/OstrichConnectApp/: main.swift
apps/terminal-ratatui/: Cargo.toml
apps/terminal-ratatui/src/: main.rs
crates/oc-backend/: Cargo.toml
crates/oc-backend/src/: backend.rs  config.rs  lib.rs  registry.rs
crates/oc-core/: Cargo.toml
crates/oc-core/src/: command.rs  error.rs  lib.rs  protocol.rs  types.rs
crates/oc-ffi/: Cargo.toml
crates/oc-ffi/src/: lib.rs
crates/protocol-ftp/: Cargo.toml
crates/protocol-ftp/src/: lib.rs
crates/protocol-ftps/: Cargo.toml
crates/protocol-ftps/src/: lib.rs
crates/protocol-sftp/: Cargo.toml
crates/protocol-sftp/src/: lib.rs
docs/: command-contract.md  protocol-extension.md
scripts/: new_protocol.sh
