[package]
name = "terminal-ratatui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.28"
secrecy = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
oc-backend = { path = "../../crates/oc-backend" }
oc-core = { path = "../../crates/oc-core" }
oc-protocol-ftp = { path = "../../crates/protocol-ftp" }
oc-protocol-sftp = { path = "../../crates/protocol-sftp" }
oc-protocol-ftps = { path = "../../crates/protocol-ftps" }
